<resources>
    <string name="app_name">Tinder App</string>

    <!--Home Activity-->
    <string name="title_activity_home">Welcome!</string>
    <string name="error_login">Not possible to login this time</string>
    <string name="error_token_login">Login failed, facebook token has expired</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="welcome">Welcome!</string>

    <!--User Fragment-->
    <string name="default_user">Default</string>
    <string name="alternative_user">Alternative</string>

    <!--Recommendations Fragment-->
    <string name="name">Name: </string>
    <string name="birth_date">Birth date: </string>
    <string name="distance">Distance (in miles): </string>
    <string name="igram">Instagram user: </string>
    <string name="job">Job: </string>
    <string name="school">School: </string>
    <string name="lastConn">Last connection: </string>
    <string name="bio">Bio: </string>
    <string name="error_get_recs">Not possible to get the recommendations this time</string>
    <string name="like_everyone_dialog_title">Like everyone</string>
    <string name="like_everyone_dialog_message">Are you sure you want to send a like to everyone?</string>
    <string name="like_everyone_error">Not possible to send a like this time, try again!</string>
    <string name="like_everyone_ok">Likes correctly sent</string>
    <string name="no_recs_this_time">No recommendations this time</string>
    <string name="new_matches">&#160;new matches</string>

    <!--Matches Fragment-->
    <string name="error_get_matches">Not possible to get the matches this time</string>

    <!--Chat Activity-->
    <string name="empty_message">Message is empty, type something first!</string>

    <!--Drawer Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_new_user">Change user</string>
    <string name="menu_recs">Recommendations</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_change_location">Change location</string>
    <string name="menu_possible_matches">Possible Matches</string>
    <string name="menu_blocks">Blocks</string>
    <string name="menu_exit">Exit</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--Chat Activity-->
    <string name="hint_message">Say something</string>

    <!--Maps Activity-->
    <string name="title_activity_location">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="change_location_dialog_title">Change location</string>
    <string name="change_location_dialog_message">Are you sure you want to edit your location?</string>
    <string name="change_location_error">Not posible to change the location this time, try again!</string>
    <string name="wait_location_change">Wait a little longer to perform another location change</string>
    <string name="location_changed">Location changed successfully, go look for new matches here!</string>

    <!--User Profile Activity-->
    <string name="delete_match_dialog_title">Delete match</string>
    <string name="delete_match_dialog_message">Are you sure you want to delete this match?</string>
    <string name="delete_match_error">Not possible to delete it this time, try again!</string>
    <string name="delete_match_ok">Match correctly deleted</string>
    <string name="new_match">This is a new match!</string>
    <string name="not_a_match">Not a match :(</string>
    <string name="error_superlike_not_performed">Could not perform a superlike this time, try again later</string>
    <string name="superlike_exceeded">Superlike limit exceeded</string>

    <!--Possible matches-->
    <string name="error_get_possible_matches">Not possible to get the possible matches this time</string>
    <string name="error_sth_weird">Something weird happened</string>
    <string name="no_matches_this_time">No possible matches this time, try again later</string>

    <!--Blocks-->
    <string name="error_get_blocks">Not possible to get the blocked users this time</string>
    <string name="profile_deleted">This profile was deleted!</string>
    <string name="message_not_sent">No s\'ha pogut enviar el missatge, torna-ho a provar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_menu">main_menu</string>
</resources>