<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">
            <RelativeLayout
                android:id="@+id/like_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/pass_image"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/cross"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    />

                <RelativeLayout
                    android:id="@+id/igram_layout"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/pass_image">
                    <ImageView
                        android:id="@+id/igram_profile_image"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/igram_logo"
                        />
                    <TextView
                        android:id="@+id/igram_profile_text"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_toEndOf="@id/igram_profile_image"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/share_image"
                    android:layout_width="48dp"
                    android:layout_height="35dp"
                    android:src="@android:drawable/ic_menu_share"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/superlike_image"
                    android:layout_width="48dp"
                    android:layout_height="35dp"
                    android:src="@drawable/superlike"
                    android:layout_toStartOf="@id/share_image"
                    android:layout_marginEnd="15dp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/like_image"
                    android:layout_width="48dp"
                    android:layout_height="35dp"
                    android:src="@drawable/tick"
                    android:layout_toStartOf="@id/superlike_image"
                    android:layout_marginEnd="15dp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/location_image"
                    android:layout_width="48dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_place_black_48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:text="@string/name"
                android:layout_below="@id/like_layout"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_below="@id/name"
                android:text="@string/birth_date"
                />
            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_below="@id/birth_date"
                android:text="@string/distance"
                />
            <TextView
                android:id="@+id/last_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_below="@id/distance"
                android:text="@string/lastConn"
                />
            <TextView
                android:id="@+id/jobs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_below="@id/last_connection"
                android:text="@string/job"
                />
            <TextView
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_below="@id/jobs"
                android:text="@string/school"
                />
            <TextView
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:layout_below="@id/last_connection"
                android:text="@string/bio"
                />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>